--- a/Assignment3/Homework3.ipynb
+++ b/Assignment3/Homework3.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVM(X,Y,K,epochs=25,learn_rate=1,reg_term=1,C=1,Gamma=1):\n",
+    "def SVM(X,Y,K,epochs=30,learn_rate=1,reg_term=1,C=1,Gamma=1):\n",
     "    #initialize random weights\n",
     "    w = np.zeros(X.shape[0])\n",
     "    for epoch in range(epochs):\n",
@@ -206,40 +206,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pipeline(X,Y,epochs=25,learn_rate=1,reg_term=1,C=1,Gamma=1):\n",
+    "def solve_classifier(X,Y,epochs=30,learn_rate=1,reg_term=1,C=1,Gamma=1):\n",
     "    K = rbf_kernel(X,Gamma)\n",
     "    w_vector = SVM(X,Y,K,epochs,learn_rate)\n",
-    "    #need to classify everything in X \n",
-    "    #things to classify:\n",
-    "    classifications = [classification(i,w_vector,Y,K) for i in range(len(X))]\n",
-    "    \"\"\"\n",
-    "    size = range(len(X))\n",
     "\n",
-    "    classify_list = []\n",
-    "    for index_x in size:\n",
-    "        classify_list.append(classification(index_x,w_vector,Y,K,))\n",
-    "    \"\"\"\n",
+    "    classifications = []\n",
+    "    for i in range(len(X)):\n",
+    "        class_ = classification(i,w_vector,Y,K)\n",
+    "        classifications.append(class_)\n",
+    "\n",
     "    return classifications,w_vector\n",
     "\n",
-    "classes,w = pipeline(x_train,y_train)\n",
+    "classes,w = solve_classifier(x_train,y_train)\n",
     "correct_classify = []\n",
     "incorrect_classify = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.9533333333333334  :accuracy of training data\n"
+      "0.9551851851851851  :accuracy of training data\n"
      ]
     }
    ],
@@ -259,21 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.9711111111111111  :accuracy of test data\n"
+      "0.9577777777777777  :accuracy of test data\n"
      ]
     }
    ],
    "source": [
-    "#check out the test data accuracy. only calculate kernel and classes, use the w that is already calculated\n",
+    "#check out the test data accuracy. only calculate kernel and classes, use the w that is already calculated from training.\n",
     "K = rbf_kernel(x_test,1)\n",
-    "classifications_test = [classification(i,w,y_test,K) for i in range(len(x_test))]\n",
+    "classifications_test = []\n",
+    "for i in range(len(X)):\n",
+    "    class_ = classification(i,w,y_test,K)\n",
+    "    classifications_test.append(class_)\n",
     "\n",
     "correct_classify_test = []\n",
     "incorrect_classify_test = []\n",
@@ -292,11 +291,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our training and testing data perform almost identically, which is great! The classifier is probably working. Now let's plot it. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
