--- a/Assignment3/Homework3.ipynb
+++ b/Assignment3/Homework3.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.7.7 64-bit ('anaconda3': virtualenv)",
-   "display_name": "Python 3.7.7 64-bit ('anaconda3': virtualenv)",
+   "name": "Python 3.7.7 64-bit ('base': conda)",
+   "display_name": "Python 3.7.7 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "7c081f5da1bfee50c0186fa1fb9a35fab0508e5e9efe67840514a29b425454b6"
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +107,15 @@
    ]
   },
   {
+   "source": [
+    "There are a ton of overlapping points, so it seems like using an rbf kernel, which is good at defining soft margins, so to avoid overfitting or underfitting, I'm choosing this kernel. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Loss_Calculation(w,K,X,Y,reg_term=1,C=1): #K is 2700 x 2700 matrix (for training data), x is 2700x2, w is 2700x1 (training data)\n",
-    "    #Hinge loss determinism\n",
+    "def Wiggle(w,K,X,Y,reg_term=1,C=1): #K is 2700 x 2700 matrix (for training data), x is 2700x2, w is 2700x1 (training data)\n",
+    "    #Hinge loss determinism. This finds how much the w vector changes to get closer and closer to complete classification.\n",
     "    L_list = []\n",
     "    size_y = range(len(y))\n",
     "    for i in size_y:\n",
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +205,7 @@
     "    #initialize random weights\n",
     "    w = np.zeros(X.shape[0])\n",
     "    for epoch in range(epochs):\n",
-    "        w_change = Loss_Calculation(w,K,X,Y,reg_term,C)\n",
+    "        w_change = Wiggle(w,K,X,Y,reg_term,C)\n",
     "        w = np.subtract(w,w_change) #account for the wiggle in the w vector\n",
     "    \n",
     "    return w"
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.9551851851851851  :accuracy of training data\n"
+      "0.9548148148148148  :accuracy of training data\n"
      ]
     }
    ],
@@ -255,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.9577777777777777  :accuracy of test data\n"
+      "0.9711111111111111  :accuracy of test data\n"
      ]
     }
    ],
@@ -270,9 +277,9 @@
     "#check out the test data accuracy. only calculate kernel and classes, use the w that is already calculated from training.\n",
     "K = rbf_kernel(x_test,1)\n",
     "classifications_test = []\n",
-    "for i in range(len(X)):\n",
-    "    class_ = classification(i,w,y_test,K)\n",
-    "    classifications_test.append(class_)\n",
+    "for i in range(len(x_test)):\n",
+    "    class_1 = classification(i,w,y_test,K)\n",
+    "    classifications_test.append(class_1)\n",
     "\n",
     "correct_classify_test = []\n",
     "incorrect_classify_test = []\n",
@@ -296,6 +303,39 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#time to plot. plooooooooooooooooooop\n",
+    "\n",
+    "size = np.linspace(-50,50,100)\n",
+    "xx,yy = np.meshgrid(size,size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy = np.vstack([xx.ravel(),yy.ravel()]).T\n",
+    "\n",
+    "def plot_classification(w,point,gamma,X,Y):\n",
+    "    f_x = 0\n",
+    "    for i in range(len(X)):\n",
+    "        new_k = np.exp(-gamma)\n",
+    "        new_k = np.exp(-gamma*np.linalg.norm(point-X[i])**2)\n",
+    "        new_k *= w[i]*Y[i]\n",
+    "        f_x += new_k\n",
+    "    return f_x\n",
+    "\n",
+    "\n",
+    "z = [classification()]"
+   ]
   }
  ]
 }
